improve cache handling for threaded code and enforce immutability